# dodo_robot_ROS2

./: .gitignore  README.md  architecture.puml  start_dodo.sh  start_gui.sh  start_monitor_gui.sh
install/: local_setup.sh  setup.sh
install/dodo_bringup/include/dodo_bringup/dodo_bringup/: robot_state_machine.hpp  state_manager_node.hpp
install/dodo_bringup/lib/dodo_bringup/: parameter_debugging_node  state_manager_node
install/dodo_bringup/share/dodo_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_bringup/share/dodo_bringup/cmake/: dodo_bringupConfig-version.cmake  dodo_bringupConfig.cmake
install/dodo_bringup/share/dodo_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/dodo_bringup/share/dodo_bringup/launch/: dodo_robot.launch.py  hardware.launch.py  simulation.launch.py  state_manager.launch.py
install/dodo_canbus/include/dodo_canbus/: canbus_node.hpp  odrive_can.hpp
install/dodo_canbus/lib/dodo_canbus/: canbus_node
install/dodo_canbus/share/dodo_canbus/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_imu/include/dodo_imu/: imu_driver.hpp  imu_node.hpp
install/dodo_imu/lib/dodo_imu/: imu_node
install/dodo_imu/share/dodo_imu/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_monitor/include/dodo_monitor/: monitor_node.hpp
install/dodo_monitor/lib/dodo_monitor/: monitor_node
install/dodo_monitor/share/dodo_monitor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_msgs/share/dodo_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_processing/include/dodo_processing/: processing_node.hpp
install/dodo_processing/lib/dodo_processing/: processing_node
install/dodo_processing/share/dodo_processing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_rl/include/dodo_rl/: ppo_model.hpp  rl_node.hpp
install/dodo_rl/lib/dodo_rl/: rl_node
install/dodo_rl/share/dodo_rl/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_safety/include/dodo_safety/: safety_node.hpp
install/dodo_safety/lib/dodo_safety/: safety_node
install/dodo_safety/share/dodo_safety/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_sensor_fusion/include/dodo_sensor_fusion/: fusion_node.hpp
install/dodo_sensor_fusion/lib/dodo_sensor_fusion/: fusion_node
install/dodo_sensor_fusion/share/dodo_sensor_fusion/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dodo_usb_command/include/dodo_usb_command/: usb_command_node.hpp
install/dodo_usb_command/lib/dodo_usb_command/: usb_command_node
install/dodo_usb_command/share/dodo_usb_command/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
logs/: safety_log_20250323_153528.txt
src/dodo_bringup/: CMakeLists.txt  README.md
src/dodo_bringup/include/dodo_bringup/: robot_state_machine.hpp  state_manager_node.hpp
src/dodo_bringup/launch/: dodo_robot.launch.py  hardware.launch.py  simulation.launch.py  state_manager.launch.py
src/dodo_bringup/src/: parameter_debugging_node.cpp  robot_state_machine.cpp  state_manager_node.cpp
src/dodo_canbus/: CMakeLists.txt  README.md
src/dodo_canbus/include/dodo_canbus/: canbus_node.hpp  odrive_can.hpp
src/dodo_canbus/launch/: canbus_node.launch.py
src/dodo_canbus/src/: canbus_node.cpp  odrive_can.cpp
src/dodo_imu/: CMakeLists.txt  README.md
src/dodo_imu/include/dodo_imu/: imu_driver.hpp  imu_node.hpp
src/dodo_imu/launch/: imu_node.launch.py
src/dodo_imu/src/: imu_driver.cpp  imu_node.cpp
src/dodo_monitor/: CMakeLists.txt  README.md  package.xml
src/dodo_monitor/config/: monitor_params.yaml
src/dodo_monitor/include/dodo_monitor/: gui_node.hpp  monitor_gui.hpp  monitor_node.hpp
src/dodo_monitor/launch/: gui_node.launch.py  monitor_node.launch.py
src/dodo_monitor/src/: gui_node.cpp  monitor_core.cpp  monitor_gui.cpp  monitor_node.cpp
src/dodo_msgs/: CMakeLists.txt  README.md
src/dodo_msgs/msg/: AlignedSensorData.msg
src/dodo_processing/: CMakeLists.txt  README.md  package.xml
src/dodo_processing/include/dodo_processing/: processing_node.hpp
src/dodo_processing/launch/: processing_node.launch.py
src/dodo_processing/src/: processing_node.cpp
src/dodo_rl/: CMakeLists.txt  README.md  package.xml
src/dodo_rl/include/dodo_rl/: ppo_model.hpp  rl_node.hpp
src/dodo_rl/launch/: rl_node.launch.py
src/dodo_rl/src/: ppo_model.cpp  rl_node.cpp
src/dodo_robot_ws/: robot_state_machine.cpp  robot_state_machine.hpp
src/dodo_safety/: CMakeLists.txt  README.md
src/dodo_safety/include/dodo_safety/: safety_node.hpp
src/dodo_safety/launch/: safety_node.launch.py
src/dodo_safety/src/: safety_node.cpp
src/dodo_sensor_fusion/: CMakeLists.txt  README.md
src/dodo_sensor_fusion/include/dodo_sensor_fusion/: fusion_node.hpp
src/dodo_sensor_fusion/launch/: fusion_node.launch.py
src/dodo_sensor_fusion/src/: fusion_node.cpp
src/dodo_usb_command/: CMakeLists.txt  README.md  package.xml
src/dodo_usb_command/include/dodo_usb_command/: usb_command_node.hpp
src/dodo_usb_command/launch/: usb_command.launch.py
src/dodo_usb_command/src/: usb_command_node.cpp
(+117 files in other folders)
